# homebot

./: Cargo.toml  config.yaml
src/: colourful.rs  config.rs  dailyroutine.rs  hue.rs  main.rs  programme.rs
