[package]

	name = "homebot"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2018"

[dependencies]

	async-trait = "0.1"
	chrono = "0.4"
	futures = "0.3"
	rand = "0.8"
	reqwest = { version = "0.11", features = [ "json" ] }
	serde = { version = "1.0", features = [ "derive", "rc" ] }
	serde_json = "1.0"
	sunrise = "1.0"
	tokio = { version = "1.1", features = [ "macros", "rt-multi-thread" ] }

