[package]

	name = "homebot"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2018"

[dependencies]

	async-trait = "0.1"
	chrono = { version = "0.4", features = [ "serde" ] }
	futures = "0.3"
	rand = "0.8"
	reqwest = { version = "0.11", features = [ "json" ] }
	serde = { version = "1.0", features = [ "derive", "rc" ] }
	serde_json = "1.0"
	serde_yaml = "0.8"
	sunrise = "1.0"
	tokio = { version = "1.1", features = [ "macros", "rt-multi-thread" ] }

